# dxup

./: .gitignore  .tool-versions  README.md  bun.lockb  components.json  index.html  package.json  panda.config.ts  park-ui.json  tailwind.config.js  tsconfig.json  tsr.config.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: build.ts
src/: App.css  App.tsx  fonts.ts  global.css  main.tsx  providers.tsx  routeTree.gen.ts  tailwind.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: dxup.icns
src-tauri/src/: main.rs
src/api/: cli.ts  index.ts  tauri.ts
src/components/: LoaderIcon.tsx  drawer.tsx  easy-tooltip.tsx  floating-action-button.tsx  logs-drawer.tsx  navbar.tsx  route-error.tsx  route-pending.tsx  sidebar.tsx
src/hooks/: media-query.ts  toaster.tsx  window-size.ts
src/lib/: create-style-context.tsx  query-client.ts
src/routes/: $tool.tsx  __root.tsx  doctor.tsx  index.lazy.tsx  index.tsx  playground.tsx  plugins.tsx
src/routes/asdf/: _layout.about.tsx  _layout.doctor.tsx  _layout.index.tsx  _layout.playground.tsx  _layout.plugins.tsx  _layout.tool.$toolName.tsx  _layout.tsx
src/routes/tools/: _layout.about.tsx  _layout.doctor.tsx  _layout.index.tsx  _layout.playground.tsx  _layout.tsx  (+2 more)
src/shadcn/: accordion.tsx  badge.tsx  drawer.tsx  sonner.tsx  toaster.tsx  tooltip.tsx  use-toast.ts
src/stores/: cache.ts  drawer.ts  logs.ts  project.ts
src/ui/: accordion.tsx  alert.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  carousel.tsx  checkbox.tsx  clipboard.tsx  code.tsx  collapsible.tsx  color-picker.tsx  combobox.tsx  date-picker.tsx  dialog.tsx  drawer.tsx  easy-tooltip.tsx  editable.tsx  file-upload.tsx  form-label.tsx  heading.tsx  hover-card.tsx  icon-button.tsx  icon.tsx  input.tsx  kbd.tsx  link.tsx  menu.tsx  number-input.tsx  pagination.tsx  pin-input.tsx  popover.tsx  progress.tsx  radio-button-group.tsx  radio-group.tsx  rating-group.tsx  segment-group.tsx  select.tsx  skeleton.tsx  slider.tsx  (+11 more)
src/utils/: cmd.ts  index.ts
